# kinetic

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  changes.txt
.github/workflows/: deploy.yml
src/: main.rs
src/controllers/: admin_controller.rs  client_controller.rs  crew_controller.rs  invoice_controller.rs  mod.rs  public_controller.rs
src/models/: mod.rs
src/repositories/: admin_repo.rs  appointment_repo.rs  client_repo.rs  crew_discussion_repo.rs  crew_member_repo.rs  crew_repo.rs  deployment_discussion_repo.rs  deployment_repo.rs  deployment_update_repo.rs  discussion_repo.rs  email_repo.rs  invoice_repo.rs  mod.rs  tenant_repo.rs  user_permission_repo.rs  user_repo.rs  work_timer_repo.rs
src/services/: access_service.rs  admin_service.rs  appointment_service.rs  auth_service.rs  client_service.rs  crew_discussion_service.rs  crew_service.rs  deployment_discussion_service.rs  deployment_service.rs  discussion_service.rs  email_service.rs  invoice_service.rs  mod.rs  schema_service.rs  tracking_service.rs  utils.rs  workspace_service.rs
static/: styles.css
templates/: dashboard.html.tera  index.html.tera  layout.html.tera  login.html.tera  register.html.tera
templates/admin/: login.html.tera  plans.html.tera  user_edit.html.tera  user_new.html.tera  users.html.tera  workspace_edit.html.tera  workspace_new.html.tera  workspaces.html.tera
templates/clients/: appointment_edit.html.tera  appointment_new.html.tera  contact_edit.html.tera  contact_new.html.tera  discussion_edit.html.tera  discussion_new.html.tera  edit.html.tera  (+5 more)
(+26 files in other folders)
